# maidan

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  Makefile  README.md  maidan-prototype.html  package.json  pnpm-lock.yaml  production_readME.md  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/ai/: package.json  pyproject.toml
apps/ai/src/maidan_ai/: __init__.py  activity_embeddings.py  anthropic_client.py  anthropic_metrics.py  config.py  db.py  demand_sensing.py  domain_events.py  embedding_queue.py  embeddings.py  embeddings_backfill.py  event_bus.py  handlers.py  jobs.py  llm_provider.py  main.py  matchmaking.py  moderation.py  observability.py  openrouter_client.py  sutradhar.py
apps/ai/tests/: test_activity_embeddings.py  test_demand_sensing.py  test_embedding_queue.py  test_event_consumer.py  test_health.py  test_matchmaking.py  test_moderation.py  test_openrouter_client.py  test_sutradhar.py
apps/api/: jest.config.cjs  package.json  tsconfig.json
apps/web/: .eslintrc.cjs  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
db/: seed.sql
db/migrations/: 00000000000000_extensions.sql  00000000000000_supabase_compat.sql  00000000000001_initial_fact_plane.sql  00000000000002_payments_idempotency_key.sql  00000000000003_posts_pagination_indexes.sql  (+5 more)
infra/: ai.Dockerfile  api.Dockerfile  docker-compose.local.yml  railway.json  web-server.mjs  web.Dockerfile
prompts/: 00-monorepo.md  01-schema.md  01b-seed.md  02-shared.md  03-auth.md  04-profile.md  05-activities.md  06-booking.md  07-payments.md  08-social.md  08b-social-graph.md  09-outboxRelay.md  10-websocket.md  11-notifications.md  12-aiService.md  13-embeddings.md  14-moderation.md  15-demandSensing.md  16-orchestrator.md  17-matchmaker.md  18-hardening.md
(+160 files in other folders)
