[project]
name = "maidan-ai"
version = "0.0.0"
description = "FastAPI AI and worker service for Maidan."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0"
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "mypy>=1.14.0,<2.0.0",
  "pytest>=8.3.4,<9.0.0",
  "ruff>=0.8.4,<1.0.0"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
