[project]
name = "maidan-ai"
version = "0.0.0"
description = "FastAPI AI and worker service for Maidan."
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi>=0.115.6,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "jsonschema>=4.23.0,<5.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "redis>=5.2.1,<7.0.0",
  "sentence-transformers>=3.3.1,<4.0.0",
  "torch>=2.5.0,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0"
]

[dependency-groups]
dev = [
  "mypy>=1.14.0,<2.0.0",
  "pytest>=8.3.4,<9.0.0",
  "ruff>=0.8.4,<1.0.0",
  "types-jsonschema>=4.24.0,<5.0.0"
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
